--- a/shop.html
+++ b/shop.html
@@ -215,7 +215,7 @@
 
           <!-- demo item row 1 -->
 
-          <div class="col-lg-2">
+          <div class="col-lg-2 col-md-3 col-sm-4 col-6">
             <div class="b_single b_single2 text-center">
 
               <div class="b_single_item">
@@ -246,7 +246,7 @@
             </div>
           </div>
 
-          <div class="col-lg-2">
+          <div class="col-lg-2 col-md-3 col-sm-4 col-6">
             <div class="b_single b_single2 text-center">
 
               <div class="b_single_item">
@@ -277,7 +277,7 @@
             </div>
           </div>
 
-          <div class="col-lg-2">
+          <div class="col-lg-2 col-md-3 col-sm-4 col-6">
             <div class="b_single b_single2 text-center">
 
               <div class="b_single_item">
@@ -308,7 +308,7 @@
             </div>
           </div>
 
-          <div class="col-lg-2">
+          <div class="col-lg-2 col-md-3 col-sm-4 col-6">
             <div class="b_single b_single2 text-center">
 
               <div class="b_single_item">
@@ -339,7 +339,7 @@
             </div>
           </div>
 
-          <div class="col-lg-2">
+          <div class="col-lg-2 col-md-3 col-sm-4 col-6">
             <div class="b_single b_single2 text-center">
 
               <div class="b_single_item">
@@ -370,7 +370,7 @@
             </div>
           </div>
 
-          <div class="col-lg-2">
+          <div class="col-lg-2 col-md-3 col-sm-4 col-6">
             <div class="b_single b_single2 text-center">
 
               <div class="b_single_item">
@@ -403,7 +403,7 @@
 
           <!-- demo item row 2 -->
 
-          <div class="col-lg-2">
+          <div class="col-lg-2 col-md-3 col-sm-4 col-6">
             <div class="b_single b_single2 text-center">
 
               <div class="b_single_item">
@@ -434,7 +434,7 @@
             </div>
           </div>
 
-          <div class="col-lg-2">
+          <div class="col-lg-2 col-md-3 col-sm-4 col-6">
             <div class="b_single b_single2 text-center">
 
               <div class="b_single_item">
@@ -465,7 +465,7 @@
             </div>
           </div>
 
-          <div class="col-lg-2">
+          <div class="col-lg-2 col-md-3 col-sm-4 col-6">
             <div class="b_single b_single2 text-center">
 
               <div class="b_single_item">
@@ -496,7 +496,7 @@
             </div>
           </div>
 
-          <div class="col-lg-2">
+          <div class="col-lg-2 col-md-3 col-sm-4 col-6">
             <div class="b_single b_single2 text-center">
 
               <div class="b_single_item">
@@ -527,7 +527,7 @@
             </div>
           </div>
 
-          <div class="col-lg-2">
+          <div class="col-lg-2 col-md-3 col-sm-4 col-6">
             <div class="b_single b_single2 text-center">
 
               <div class="b_single_item">
@@ -558,7 +558,7 @@
             </div>
           </div>
 
-          <div class="col-lg-2">
+          <div class="col-lg-2 col-md-3 col-sm-4 col-6">
             <div class="b_single b_single2 text-center">
 
               <div class="b_single_item">
